2007-05-15 06:35  Donald Ephraim Curtis <dcurtis3@sourceforge.net>

	* avogadro.nsi, avogadro/src/CMakeLists.txt,
	  avogadro/src/extension.h, avogadro/src/icons/avogadro.ico,
	  avogadro/src/mainwindow.cpp, avogadro/src/windows,
	  avogadro/src/windows/avogadro.rc,
	  libavogadro/src/engines/bsdyengine.cpp,
	  libavogadro/src/engines/debugengine.cpp,
	  libavogadro/src/engines/debugengine.h,
	  libavogadro/src/engines/labelengine.cpp,
	  libavogadro/src/engines/sphereengine.cpp,
	  libavogadro/src/engines/stickengine.cpp,
	  libavogadro/src/primitive.cpp, libavogadro/src/tool.cpp,
	  libavogadro/src/tools/clickmeasuretool.cpp,
	  libavogadro/src/tools/manipulatetool.cpp,
	  libavogadro/src/undosequence.h: fixed files based on Win32
	  compiler strictness
	  added window resource file (windows/avogadro.rc)
	  updated package building script
	  further icon updates
	  fixed an error resolving issue 1719085

	* libavogadro/src/tools/drawcommand.*
	  libavogadro/src/tools/drawtool.cpp:
	  Fix for issue 1719080: undo causing errors to multiple views.

2007-05-15 05:19  Donald Ephraim Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/icons/avogadro.ico: more icon updates

2007-05-15 05:06  Donald Ephraim Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/icons/avogadro.ico: Updated Windows Icon

2007-05-15 00:49  Geoffrey Hutchison <geoff@geoffhutchison.net>

	* avogadro/src/application.cpp: Fix drag-and-drop bug in Mac.

2007-05-14 20:54  Donald Ephraim Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.cpp: Bug fix for 1718917

2007-05-14 20:44  Donald Ephraim Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/camera.cpp, libavogadro/src/camera.h,
	  libavogadro/src/engines/labelengine.cpp,
	  libavogadro/src/painter.cpp, libavogadro/src/painter.h,
	  libavogadro/src/tools/clickmeasuretool.cpp,
	  libavogadro/src/tools/manipulatetool.cpp,
	  libavogadro/src/tools/navigatetool.cpp,
	  libavogadro/src/tools/selectrotatetool.cpp: Merged all of