@@ -33,9 +33,10 @@ TARGET_LINK_LIBRARIES(gamessextension
 INSTALL(TARGETS gamessextension DESTINATION ${DESTINATION_DIR})
 
 ### ghemical
-set(ghemicalextension_SRCS ghemicalextension.cpp)
+set(ghemicalextension_SRCS ghemicalextension.cpp forcefielddialog.cpp)
+qt4_wrap_ui(ghemicalextension_UIS_H forcefielddialog.ui)
 qt4_automoc(${ghemicalextension_SRCS})
-ADD_LIBRARY(ghemicalextension SHARED ${ghemicalextension_SRCS})
+ADD_LIBRARY(ghemicalextension SHARED ${ghemicalextension_SRCS} ${ghemicalextention_UIS_H})
 TARGET_LINK_LIBRARIES(ghemicalextension 
 	${OPENBABEL2_LIBRARIES} 
 	${QT_LIBRARIES} 
